# 100-exercises-to-learn-rust

./: Cargo.toml
.github/workflows/: ci.yml
book/: book.toml
book/src/: SUMMARY.md  going_further.md
book/src/01_intro/: 00_welcome.md  01_syntax.md
book/src/02_basic_calculator/: 00_intro.md  01_integers.md  02_variables.md  03_if_else.md  04_panics.md  05_factorial.md  06_while.md  07_for.md  08_overflow.md  09_saturating.md  10_as_casting.md
book/src/03_ticket_v1/: 00_intro.md  01_struct.md  02_validation.md  03_modules.md  04_visibility.md  05_encapsulation.md  06_ownership.md  07_setters.md  08_stack.md  09_heap.md  10_references_in_memory.md  11_destructor.md  12_outro.md
book/src/04_traits/: 00_intro.md  01_trait.md  02_orphan_rule.md  03_operator_overloading.md  04_derive.md  05_trait_bounds.md  06_str_slice.md  07_deref.md  08_sized.md  09_from.md  10_assoc_vs_generic.md  11_clone.md  12_copy.md  13_drop.md  14_outro.md
book/src/05_ticket_v2/: 00_intro.md  01_enum.md  02_match.md  03_variants_with_data.md  04_if_let.md  05_nullability.md  06_fallibility.md  07_unwrap.md  08_error_enums.md  09_error_trait.md  10_packages.md  11_dependencies.md  12_thiserror.md  13_try_from.md  14_source.md  15_outro.md
book/src/06_ticket_management/: 00_intro.md  01_arrays.md  02_vec.md  03_resizing.md  04_iterators.md  (+12 more)
exercises/02_basic_calculator/08_overflow/: Cargo.toml
exercises/02_basic_calculator/08_overflow/src/: lib.rs
exercises/03_ticket_v1/02_validation/: Cargo.toml
exercises/03_ticket_v1/02_validation/src/: lib.rs
helpers/: json2redirects.sh
(+148 files in other folders)
