[workspace]
members = [
  "exercises/*/*",
  "helpers/common",
  "helpers/mdbook-exercise-linker",
  "helpers/mdbook-link-shortener",
  "helpers/ticket_fields",
]
resolver = "2"

# Это необходимо, чтобы гарантировать ожидаемое поведение в этом конкретном упражнении.
# независимо от «глобальной» настройки `overflow-checks` в профиле `dev`.
[profile.dev.package.copy]
overflow-checks = true

[profile.dev]
overflow-checks = false