[package]
name = "overflow"
version = "0.1.0"
edition = "2021"

[lints.rust]
# На данный момент мы отключаем предупреждения о неработающем коде, чтобы уменьшить
# шум компилятора.
# Мы снова включим их, как только объясним, как работает видимость в Rust.
dead_code = "allow"

[profile.dev]
opt-level = 1               # Используйте немного лучшую оптимизацию.
overflow-checks = true     # Отключите проверку целочисленного переполнения.
