[package]
name = "validation"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
common = { path = "../../../helpers/common" }

[lints.rust]
# На данный момент мы отключаем предупреждения о неработающем коде, чтобы уменьшить
# шум компилятора.
# Мы снова включим их, как только объясним, как работает видимость в Rust.
dead_code = "allow"
